--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "piedra-papel-tijera",
-  "homepage": "https://Eudald2000.github.io/Piedra-Papel-Tijeras",
+  "homepage": "https://Eudald2000.github.io/Piedra-Papel-Tijera",
   "private": true,
   "version": "0.0.0",
   "type": "module",
